[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu/loading_screen.gd" type="Script" id=1]

[node name="LoadingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadingBar" type="TextureProgress" parent="background"]
margin_left = 249.028
margin_top = 139.259
margin_right = 802.028
margin_bottom = 179.259
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadingBarPlain" type="ProgressBar" parent="background"]
anchor_left = 0.25
anchor_top = 0.45
anchor_right = 0.75
anchor_bottom = 0.65
margin_right = 0.959961
margin_bottom = 0.199951
step = 1.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
